--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: DResSUP | UCLA Library
 email: bensonjaminhan@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  UCLA Library's digital projects incubator for graduate students and librarians.
 baseurl: "/dressup" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
