--- a/_data/participants.yml
+++ b/_data/participants.yml
@@ -6,3 +6,10 @@
   twitter: bensonjaminhan
   github: bensonhan
   blurb: Benson is a third-year computer science student at UCLA. While not seated in front of a laptop, he enjoys playing soccer, dancing (not very well), and watching movies.
+- name: dawn_childress
+  display_name: Dawn Childress
+  email: dchildress@library.ucla.edu
+  picture: 
+  twitter:
+  github: kirschbombe
+  blurb:
