--- a/_config.yml
+++ b/_config.yml
@@ -45,11 +45,15 @@ collections:
     title: People
     output: true
     permalink: /people/:name
+  sessions:
+    title: Sessions
+    output: true
+    permalink: /:name
 
-defaults:
-  - scope:
-      path: ''
-      type: people
-    values:
-      layout: people
+# defaults:
+#   - scope:
+#       path: ''
+#       type: people
+#     values:
+#       layout: people
 
